# robot_joy_control

./: 3_joystick.sh  4_robot_control.sh  CMakeLists.txt  FILE_STRUCTURE.md  README.md  README_DUAL_CONTROL.md  TECHNICAL_DETAILS.md  package.xml
config/: network_config.yaml.example
launch/: joystick_control_only.launch  joystick_fast.launch  joystick_simple.launch  nextage_head.launch  nextage_head_only.launch  nextage_with_eyes.launch  nextage_with_eyes_dual.launch  optimized_control.launch  remote_nextage_complete.launch  remote_nextage_with_eyes.launch
launch_scripts/: 3_joystick_both.sh  3_joystick_robot.sh  4_robot_head.sh  fix_joystick.sh  monitor_passive.py  quick_diagnostics.py  safe_smooth_control.sh
robots/: README.md  nextage.yaml
scripts/: joy_head_adaptive.py  joy_head_asymmetric.py  joy_head_nextage.py  joy_head_safe.py  joy_head_smooth.py  network_monitor.py  run_remote_demo.sh  start_demo.sh
